--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ body {
     font-weight: 600;
     margin-bottom: 30px;
   }
+  h3 {
+    font-size: 10%;
+    color: black;
+    font-family: Open Sans;
+  }
   h4 {
     font-size: 19px;
     line-height: 1.375em;
@@ -22,7 +27,7 @@ body {
   }
   .jumbotron {
     background: rgb(255,254,247);
-background: linear-gradient(121deg, rgba(255,254,247,1) 11%, rgba(255,231,0,1) 65%, rgba(255,179,0,1) 92%);
+background: linear-gradient(121deg, rgba(255,254,5) 11%, rgba(255,231,0,1) 65%, rgba(255,179,0,1) 92%);
     color: #000000;
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
@@ -61,7 +66,7 @@ background: linear-gradient(121deg, rgba(255,254,247,1) 11%, rgba(255,231,0,1) 6
   .carousel-indicators li.active {
     background-color: #FFF948;
   }
-  .item h4 {
+  .item h3 {
     font-size: 19px;
     line-height: 1.375em;
     font-weight: 400;
